--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
                         <a  class="btn btn-primary smooth-scroll mr-2 aos-init aos-animate" href="shop-details.html" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Custom Design</a>
                         <a  class="btn btn-primary aos-init aos-animate" href="shop.html" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Shop all</a>
                       </div>
-                    <div class="section" style="padding-top: 95vh; justify-content: center;">
+                    <div class="section" style="padding-top: 95vh; justify-content: center; border-bottom: solid;
+                    border-color: #03327d;">
                         <div class="button-container">
                             <a href="#" rel="tooltip" title="" data-original-title="Follow me on Facebook">
                             <i class="fa fa-facebook"></i></a>
@@ -182,63 +183,58 @@
                     <a href="shop.html" style="font-size: x-large;">Custom collections</a>
                     <a href="shop.html" style="float: right; font-size: x-large;">Shop all</a>
                 <div class="contain" style="padding-top: 25px; display: flex; flex-direction: row; flex-wrap: wrap; align-items: center; justify-content: center; gap: 20px;     text-align-last: center;">
-                    <article class="card" style="background: url(/img/producttable1.png); background-size: contain; background-repeat-y: no-repeat;">
+                    <article class="card" style="background: url(/img/producttable1.png); background-size: contain; background-repeat: no-repeat;">
                         <div class="card__content">
                             <h3 class="card__title"><a href="shop-details.html">"Product Name"</a></h3>
-                            <span class="card_subtitle">...fehbgdg</span>
-                            <p class="card__description">hfdsbdksg</p>
+                            <span class="card_subtitle">Price</span>
+                            <p class="card__description">Description</p>
                         </div>
                     </article>
-                    <article class="card" style="background: url(/img/producttable2.png); background-size: contain; background-repeat-y: no-repeat;">
+                    <article class="card" style="background: url(/img/producttable2.png); background-size: contain; background-repeat: no-repeat;">
                         <div class="card__content">
                             <h3 class="card__title"><a href="shop-details.html">"Pro Name"</a></h3>
                             <span class="card_subtitle">Price</span>
                             <p class="card__description">Description</p>
                         </div>
                     </article>
-                    <article class="card" style="background: url(/img/producttable3.png); background-size: contain; background-repeat-y: no-repeat;">
+                    <article class="card" style="background: url(/img/producttable3.png); background-size: contain; background-repeat: no-repeat;">
                         <div class="card__content">
                             <h3 class="card__title"><a href="shop-details.html">"Pro Name"</a></h3>
                             <span class="card_subtitle">Price</span>
                             <p class="card__description">Description</p>
                         </div>
                     </article>
-                    <article class="card" style="background: url(/img/producttable4.png); background-size: contain; background-repeat-y: no-repeat;"">
+                    <article class="card" style="background: url(/img/producttable4.png); background-size: contain; background-repeat: no-repeat;">
                         <div class="card__content">
                             <h3 class="card__title"><a href="shop-details.html">"Pro Name"</a></h3>
                             <span class="card_subtitle">Price</span>
                             <p class="card__description">Description</p>
                         </div>
                     </article>
-                    <article class="card" style="background: url(/img/producttable5.png); background-size: contain; background-repeat-y: no-repeat;"">
+                    <article class="card" style="background: url(/img/Arrow\ Designs\ \(2\).png); background-size: cover;     background-position-y: center; background-repeat: no-repeat;">
+                    </article>
+                    <article class="card" style="background: url(/img/producttable6.png); background-size: contain; background-repeat: no-repeat;">
                         <div class="card__content">
                             <h3 class="card__title"><a href="shop-details.html">"Pro Name"</a></h3>
                             <span class="card_subtitle">Price</span>
                             <p class="card__description">Description</p>
                         </div>
                     </article>
-                    <article class="card" style="background: url(/img/producttable6.png); background-size: contain; background-repeat-y: no-repeat;"">
+                    <article class="card" style="background: url(/img/producttable4.png); background-size: contain;     background-position-y: center;background-repeat: no-repeat;">
                         <div class="card__content">
                             <h3 class="card__title"><a href="shop-details.html">"Pro Name"</a></h3>
                             <span class="card_subtitle">Price</span>
                             <p class="card__description">Description</p>
                         </div>
                     </article>
-                    <article class="card" style="background: url(/img/producttable4.png); background-size: contain; background-repeat-y: no-repeat;"">
+                    <article class="card" style="background: url(/img/producttable5.png); background-size: contain; background-repeat: no-repeat;">
                         <div class="card__content">
                             <h3 class="card__title"><a href="shop-details.html">"Pro Name"</a></h3>
                             <span class="card_subtitle">Price</span>
                             <p class="card__description">Description</p>
                         </div>
                     </article>
-                    <article class="card" style="background: url(/img/producttable5.png); background-size: contain; background-repeat-y: no-repeat;"">
-                        <div class="card__content">
-                            <h3 class="card__title"><a href="shop-details.html">"Pro Name"</a></h3>
-                            <span class="card_subtitle">Price</span>
-                            <p class="card__description">Description</p>
-                        </div>
-                    </article>
-                    <article class="card" style="background: url(/img/producttable6.png); background-size: contain; background-repeat-y: no-repeat;"">
+                    <article class="card" style="background: url(/img/producttable6.png); background-size: contain; background-repeat: no-repeat;">
                         <div class="card__content">
                             <h3 class="card__title"><a href="shop-details.html">"Pro Name"</a></h3>
                             <span class="card_subtitle">Price</span>
@@ -253,7 +249,7 @@
             <header class="main-visual">
                 <h1 class="main-visual__title">
                 <div class="container" style="text-align: -webkit-center; display: flex; padding: inherit; ">
-                    <a class="button" style="border-width: thin; border-radius: 10px; padding: 10px; box-shadow: 5px 5px 10px #dbdbdb, -5px -5px 10px #ffffff; font-size: small; ">Watch with lights off</a>
+                    <a class="button" style="border-width: thin; border-radius: 10px; padding: 10px; box-shadow: 5px 5px 10px #dbdbdb, -5px -5px 10px #ffffff; font-size: xxx-large;     color: #3775ff;"><i class="fa-regular fa-lightbulb"></i></a>
                 </div>
                 </h1>
                 <div class="main-visual__background" style="background-size: contain;">
