--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                 <li class="menu-item"><a href="shop-details.html"><underline style="color: #03327d;">Shop</underline></a></li>
   
                 <li class="menu-item"><a href="shop.html"><i class="fa-brands fa-youtube" style="font-size: x-large;"></i></a></li>
-                <li class="menu-item"><a href="shop.html"><i class="fa-brands fa-etsy"></i></a></li>
-                <li class="menu-item"><a href="faq.html"><underline style="color: #03327d;">'About Us'</underline></a></li>
+                <li class="menu-item"><a href="shop.html"><underline style="color: #03327d;">Etsy</underline></a></li>
+                <li class="menu-item"><a href="faq.html"><underline style="color: #03327d;">About Us</underline></a></li>
                 </ul>
             </div>
             </nav>
@@ -100,7 +100,7 @@
                     <div class="page-header-image" data-parallax="true" style="background-image: url('img/producttable2.png')"></div>
                     <div class="container">
                       <div class="content-center" style="z-index: 2;">
-                        <div class="cc-profile-image" style="padding-top: 20px;"><a href="#"><img src="img/Arrow Designs.png" style="height: 175px;" alt="Image"></a></div>
+                        <div class="cc-profile-image" style="height: 28vh; padding-top: 2vh;"><a href="#"><img src="img/Arrow Designs.png" style="height: 175px;" alt="Image"></a></div>
                         <div class="h2 title" style="color: #03327d; font-size: xxx-large;"></div>
                         <p style="color: #03327d;"></p><br><br><br><br><br><br><br><br><br><br><br><br>
                         <a  class="btn btn-primary smooth-scroll mr-2 aos-init aos-animate" href="shop-details.html" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Custom Design</a>
@@ -220,7 +220,7 @@
                             <p class="card__description">Description</p>
                         </div>
                     </article>
-                    <article class="card" style="background: url(/img/producttable4.png); background-size: contain;     background-position-y: center;background-repeat: no-repeat;">
+                    <article class="card" style="background: url(/img/producttable4.png); background-size: contain; background-repeat: no-repeat;">
                         <div class="card__content">
                             <h3 class="card__title"><a href="shop-details.html">"Pro Name"</a></h3>
                             <span class="card_subtitle">Price</span>
