--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -2,10 +2,10 @@
 <html lang="en" X-Frame-Options="SAMEORIGIN" X-Frame-Options: SAMEORIGIN X-Content-Type-Options="nosniff" X-Content-Type-Options: nosniff >
 
 <head>
-    <title>Craving Cake | Privacy Policy</title>
-    <meta name="title" content="Craving Cake | Privacy Policy"/>
-    <meta name="description" content="Craving Cakes' Privacy Policy" />
-    <meta name="keywords" content="Craving, Cake, CravingCake, Buyacake, buycake, Birthday Cake, Buy a cake, Cake near me, Wedding cakes, Cupcakes, Brownies, Online cakes, Bkaery near me, Cravings, Crave, Crave Cake, Cake crave, Cake craving, Craving cupcakes, Cheap buns, buns, red velvet cake, cake box, amazon cake, amazon cake box, carrot cake, recipe book, recipe, lemon drizzle cake, cake stand, "/>
+    <title>Tomax Bespoke | Bespoke Creative Woodwork</title>
+    <meta name="title" content="Tomax Bespoke | Bespoke Creative Woodwork"/>
+    <meta name="description" content="A bespoke handcrafted woodwork business, creating unique and creative crafts of high quality" />
+    <meta name="keywords" content=""/>
     <meta name="robots" content="INDEX,FOLLOW"/>
     <meta charset="UTF-8" />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
@@ -17,14 +17,14 @@
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css?family=Lato%3A300%2C400%2C700%2C300%2C700%7CDomine%3A400&#038;display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato%3A300%2C400%2C700%2C300%2C700%7CDomine%3A400&#038;display=swap" media="print" onload="this.media='all'" /><noscript>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato%3A300%2C400%2C700%2C300%2C700%7CDomine%3A400&#038;display=swap" /></noscript>
-	<link rel="canonical" href="https://www.cravingcake.co.uk/privacypolicy.html"/>
+	<link rel="canonical" href="https://www.cravingcake.co.uk/"/>
 	<meta property="og:locale" content="en" />
 	<meta property="og:type" content="website" />
     
-	<meta property="og:title" content="Craving Cake | Privacy Policy" />
-	<meta property="og:description" content="Craving Cakes' Privacy Policy" />
-	<meta property="og:url" content="https://www.cravingcake.co.uk/privacypolicy.html" />
-	<meta property="og:site_name" content="Craving Cake" />
+	<meta property="og:title" content="Tomax Bespoke | Bespoke Creative Woodwork" />
+	<meta property="og:description" content="A bespoke handcrafted woodwork business, creating unique and creative crafts of high quality" />
+	<meta property="og:url" content="https://www.mbdex.live/" />
+	<meta property="og:site_name" content="Tomax Bespoke" />
 	<meta property="og:image" content="img/ion-icon name=logo-amazonion-icon (6).webp" alt="Ogimage"/>
 	<meta property="og:image:width" content="2048" />
 	<meta property="og:image:height" content="2560" />
@@ -40,6 +40,8 @@
 
     <meta http-equiv="Content-Security-Policy"/>  
     <script type="application/ld+json"></script>
+
+    <script src="https://kit.fontawesome.com/4c7f2cf79a.js" crossorigin="anonymous"></script>
 
     <link rel="icon" href="img/favicon.png" sizes="32x32" alt="Apple"/>
     <link rel="icon" href="img/ion-icon name=logo-amazonion-icon (7).webp" sizes="192x192" alt="Iphone"/>
@@ -86,8 +88,8 @@
                 <li class="menu-item"><a href="shop-details.html"><underline style="color: #03327d;">Shop</underline></a></li>
   
                 <li class="menu-item"><a href="shop.html"><i class="fa-brands fa-youtube" style="font-size: x-large;"></i></li>
-                <li class="menu-item"><a href="shop.html"><i class="fa-brands fa-etsy"></i></li>
-                <li class="menu-item" style="border-width: thin; border-radius: 10px; padding: 10px; box-shadow: 5px 5px 10px #dbdbdb, -5px -5px 10px #ffffff;"><a href="faq.html"><underline style="color: #03327d;">'About Us'</underline></a></li>
+                    <li class="menu-item"><a href="shop.html"><underline style="color: #03327d;">Etsy</underline></a></li>
+                    <li class="menu-item" style="border-width: thin; border-radius: 10px; padding: 10px; box-shadow: 5px 5px 10px #dbdbdb, -5px -5px 10px #ffffff;"><a href="faq.html"><underline style="color: #03327d;">About Us</underline></a></li>
                 </ul>
             </div>
             </nav>
