--- a/shop.html
+++ b/shop.html
@@ -2,10 +2,10 @@
 <html lang="en" X-Frame-Options="SAMEORIGIN" X-Frame-Options: SAMEORIGIN X-Content-Type-Options="nosniff" X-Content-Type-Options: nosniff >
 
 <head>
-    <title>Craving Cake | Main Shop Page 1</title>
-    <meta name="title" content="Craving Cake | Main Shop Page 1"/>
-    <meta name="description" content="Page 1 of our yummy bakes, cakes and more!" />
-    <meta name="keywords" content="Craving, Cake, CravingCake, Buyacake, buycake, Birthday Cake, Buy a cake, Cake near me, Wedding cakes, Cupcakes, Brownies, Online cakes, Bkaery near me, Cravings, Crave, Crave Cake, Cake crave, Cake craving, Craving cupcakes, Cheap buns, buns, red velvet cake, cake box, amazon cake, amazon cake box, carrot cake, recipe book, recipe, lemon drizzle cake, cake stand, "/>
+    <title>Tomax Bespoke | Bespoke Creative Woodwork</title>
+    <meta name="title" content="Tomax Bespoke | Bespoke Creative Woodwork"/>
+    <meta name="description" content="A bespoke handcrafted woodwork business, creating unique and creative crafts of high quality" />
+    <meta name="keywords" content=""/>
     <meta name="robots" content="INDEX,FOLLOW"/>
     <meta charset="UTF-8" />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
@@ -17,24 +17,31 @@
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css?family=Lato%3A300%2C400%2C700%2C300%2C700%7CDomine%3A400&#038;display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato%3A300%2C400%2C700%2C300%2C700%7CDomine%3A400&#038;display=swap" media="print" onload="this.media='all'" /><noscript>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato%3A300%2C400%2C700%2C300%2C700%7CDomine%3A400&#038;display=swap" /></noscript>
-	<link rel="canonical" href="https://www.cravingcake.co.uk/shop.html"/>
+	<link rel="canonical" href="https://www.cravingcake.co.uk/"/>
 	<meta property="og:locale" content="en" />
 	<meta property="og:type" content="website" />
     
-	<meta property="og:title" content="Craving Cake | Main Shop Page 1" />
-	<meta property="og:description" content="Page 1 of our yummy bakes, cakes and more!" />
-	<meta property="og:url" content="https://www.cravingcake.co.uk/shop.html" />
-	<meta property="og:site_name" content="Craving Cake" />
+	<meta property="og:title" content="Tomax Bespoke | Bespoke Creative Woodwork" />
+	<meta property="og:description" content="A bespoke handcrafted woodwork business, creating unique and creative crafts of high quality" />
+	<meta property="og:url" content="https://www.mbdex.live/" />
+	<meta property="og:site_name" content="Tomax Bespoke" />
 	<meta property="og:image" content="img/ion-icon name=logo-amazonion-icon (6).webp" alt="Ogimage"/>
 	<meta property="og:image:width" content="2048" />
 	<meta property="og:image:height" content="2560" />
 	<meta property="og:image:type" content="img/ion-icon name=logo-amazonion-icon (6).webp" alt="Ogtype"/>
 
     <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-MW5JBGL');</script>
     <!-- End Google Tag Manager -->
 
     <meta http-equiv="Content-Security-Policy"/>  
     <script type="application/ld+json"></script>
+
+    <script src="https://kit.fontawesome.com/4c7f2cf79a.js" crossorigin="anonymous"></script>
 
     <link rel="icon" href="img/favicon.png" sizes="32x32" alt="Apple"/>
     <link rel="icon" href="img/ion-icon name=logo-amazonion-icon (7).webp" sizes="192x192" alt="Iphone"/>
@@ -58,55 +65,35 @@
 
 <body>
 
-    <div class="containers" style="width: 100%;">
-        <header class="header" style="background-image: url(); background-position: center;     background-size: cover;">
-            <nav class="navbar"  style="justify-content: center;     background-color: #f1f5f8;">
-            <a style="color: #03327d; font-family: sans-serif;" class="brand" href="#"></a>
-            <input type="checkbox" id="nav" class="hidden">
-            <label for="nav" class="nav-toggle">
-                <span></span>
-                <span></span>
-                <span></span>
-            </label>
-            <div class="wrapper" >
-                <ul class="menu">
-                <li class="menu-item" style="    border-width: thin; border-radius: 20px; padding: 10px; box-shadow: 5px 5px 10px #dbdbdb, -5px -5px 10px #ffffff;"><a href="index.html"><underline>Home</underline></a></li>
-                <li class="menu-item"><a href="shop-details.html"><underline>Shop</underline></a></li>
-  
-                <li class="menu-item"><a href="shop.html"><underline>Studio</underline></a></li>
-                <li class="menu-item"><a href="faq.html"><underline>About</underline></a></li>
-                </ul>
-            </div>
-            </nav>
-        </header>
+  <div class="containers" style="width: 100%;">
+    <header class="header" style="background-image: url(); background-position: center;     background-size: cover; padding-bottom: 1vh; border-bottom: solid;">
+        <nav class="navbar"  style="justify-content: center;     background-color: #f1f5f8;">
+        <a style="color: #03327d; font-family: sans-serif;" class="brand" href="#"></a>
+        <input type="checkbox" id="nav" class="hidden">
+        <label for="nav" class="nav-toggle">
+            <span></span>
+            <span></span>
+            <span></span>
+        </label>
+        <div class="wrapper" >
+            <ul class="menu">
+            <li class="menu-item"><a href="index.html"><underline style="color: #03327d;">Home</underline></a></li>
+            <li class="menu-item" style="border-width: thin; border-radius: 10px; padding: 10px; box-shadow: 5px 5px 10px #dbdbdb, -5px -5px 10px #ffffff;"><a href="shop-details.html"><underline style="color: #03327d;">Shop</underline></a></li>
+
+            <li class="menu-item"><a href="shop.html"><i class="fa-brands fa-youtube" style="font-size: x-large;"></i></li>
+              <li class="menu-item"><a href="shop.html"><underline style="color: #03327d;">Etsy</underline></a></li>
+              <li class="menu-item"><a href="faq.html"><underline style="color: #03327d;">About Us</underline></a></li>
+          </ul>
+        </div>
+        </nav>
+    </header>
 
 
     <header class="main-visual">
         <h1 class="main-visual__title">
-            <div class="intro-heading" style="float: left">|Crafting <a style="color:rgb(95, 95, 95);"> perfection|</a></div>
-        </h1>
-        <div class="main-visual__background">
-          <div id="js-background-slider" class="main-visual__background-slider swiper-container" data-loaded="false">
-            <div class="main-visual__background-slider-list swiper-wrapper">
-              <div class="main-visual__background-slider-item swiper-slide">
-                <img class="main-visual__background-slider-image" src="img/producttable1.png" width="1920" height="1280" alt="" decoding="async">
-              </div>
-              <div class="main-visual__background-slider-item swiper-slide">
-                <img class="main-visual__background-slider-image" src="img/producttable2.png" width="1920" height="1280" alt="" decoding="async">
-              </div>
-              <div class="main-visual__background-slider-item swiper-slide">
-                <img class="main-visual__background-slider-image" src="img/producttable3.png" width="1920" height="1280" alt="" decoding="async">
-              </div>
-              <div class="main-visual__background-slider-item swiper-slide">
-                <img class="main-visual__background-slider-image" src="img/producttable4.png" width="1920" height="1280" alt="" decoding="async">
-              </div>
-              <div class="main-visual__background-slider-item swiper-slide">
-                <img class="main-visual__background-slider-image" src="img/producttable5.png" width="1920" height="1280" alt="" decoding="async">
-              </div>
-            </div>
-            <div class="background-slider__pagination swiper-pagination"></div>
-          </div>
-        </div>
+            <div class="intro-heading" style="float: left">Crafting <a style="color:rgb(95, 95, 95);"> perfection</a></div>
+            <a>Shop Coming Soon</a>
+          </h1>
       </header>
 
 <!-- Js Plugins -->
