--- a/shop-details.html
+++ b/shop-details.html
@@ -80,8 +80,8 @@
               <li class="menu-item" style="border-width: thin; border-radius: 10px; padding: 10px; box-shadow: 5px 5px 10px #dbdbdb, -5px -5px 10px #ffffff;"><a href="shop-details.html"><underline style="color: #03327d;">Shop</underline></a></li>
 
               <li class="menu-item"><a href="shop.html"><i class="fa-brands fa-youtube" style="font-size: x-large;"></i></li>
-              <li class="menu-item"><a href="shop.html"><i class="fa-brands fa-etsy"></i></li>
-              <li class="menu-item"><a href="faq.html"><underline style="color: #03327d;">'About Us'</underline></a></li>
+                <li class="menu-item"><a href="shop.html"><underline style="color: #03327d;">Etsy</underline></a></li>
+                <li class="menu-item"><a href="faq.html"><underline style="color: #03327d;">About Us</underline></a></li>
               </ul>
           </div>
           </nav>
