--- a/index.html
+++ b/index.html
@@ -70,8 +70,15 @@
 
     <!-- Header Section Begin -->
     <div class="containers" style="width: 100%;">
-        <header class="header" style="background-image: url(); background-position: center;     background-size: cover; padding-bottom: 0.5vh; border-bottom: solid;">
-            <nav class="navbar"  style="justify-content: center;     background-color: #f1f5f8;">
+        <header class="header" style="    background-image: url(img/Arrow\ Designs.png);
+        background-position: left;
+        background-size: contain;
+        background-repeat: no-repeat;
+        padding-bottom: 6.5vh;
+        border-bottom: solid;
+        height: 90px;
+        margin: 20px;">
+            <nav class="navbar"  style="justify-content: center;     background-color: #f1f5f800;">
             <a style="color: #03327d; font-family: sans-serif;" class="brand" href="#"></a>
             <input type="checkbox" id="nav" class="hidden">
             <label for="nav" class="nav-toggle">
@@ -100,13 +107,12 @@
                     <div class="page-header-image" data-parallax="true" style="background-image: url('img/producttable2.png')"></div>
                     <div class="container">
                       <div class="content-center" style="z-index: 2;">
-                        <div class="cc-profile-image" style="height: 28vh; padding-top: 2vh;"><a href="#"><img src="img/Arrow Designs.png" style="height: 175px;" alt="Image"></a></div>
-                        <div class="h2 title" style="color: #03327d; font-size: xxx-large;"></div>
-                        <p style="color: #03327d;"></p><br><br><br><br><br><br><br><br><br><br><br><br>
-                        <a  class="btn btn-primary smooth-scroll mr-2 aos-init aos-animate" href="shop-details.html" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Custom Design</a>
-                        <a  class="btn btn-primary aos-init aos-animate" href="shop.html" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Shop all</a>
+                        <div class="h2 title" style="color: #03327d; font-size: xxx-large; font-family:u;">Arrow Designs</div>
+                        <p style="color: #03327d;"></p><br>
+                        <a  class="btn btn-primary smooth-scroll mr-2 aos-init aos-animate" style="border: solid; background-image: url(img/Woodworkback.png);" href="shop-details.html" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Custom Design</a>
+                        <a  class="btn btn-primary aos-init aos-animate" style="border: solid; background-color: #03327d;" href="shop.html" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Shop all</a>
                       </div>
-                    <div class="section" style="padding-top: 95vh; justify-content: center; border-bottom: solid;
+                    <div class="section" style="padding-top: 80vh; justify-content: center; border-bottom: solid;
                     border-color: #03327d;">
                         <div class="button-container">
                             <a href="#" rel="tooltip" title="" data-original-title="Follow me on Facebook">
