--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" X-Frame-Options="SAMEORIGIN" X-Frame-Options: SAMEORIGIN X-Content-Type-Options="nosniff" X-Content-Type-Options: nosniff >
 
 <head>
-    <title>Tomax Bespoke | Bespoke Creative Woodwork</title>
+    <title>Epoxy Woods | Handcrafted Epoxy Tables and wood furniture</title>
     <meta name="title" content="Tomax Bespoke | Bespoke Creative Woodwork"/>
     <meta name="description" content="A bespoke handcrafted woodwork business, creating unique and creative crafts of high quality" />
     <meta name="keywords" content=""/>
@@ -70,14 +70,12 @@
 
     <!-- Header Section Begin -->
     <div class="containers" style="width: 100%;">
-        <header class="header" style="    background-image: url(img/Arrow\ Designs.png);
-        background-position: left;
+        <header class="header" style="    background-image: url(img/10.png); 
+        background-position: center;
         background-size: contain;
         background-repeat: no-repeat;
-        padding-bottom: 6.5vh;
-        border-bottom: solid;
-        height: 90px;
-        margin: 20px;">
+        height: 10vh;
+        margin: 1vmax;">
             <nav class="navbar"  style="justify-content: center;     background-color: #f1f5f800;">
             <a style="color: #03327d; font-family: sans-serif;" class="brand" href="#"></a>
             <input type="checkbox" id="nav" class="hidden">
@@ -86,13 +84,13 @@
                 <span></span>
                 <span></span>
             </label>
-            <div class="wrapper" >
+            <div class="wrapper" style="    margin-top: 1.25vh;">
                 <ul class="menu" style="text-align-last: center;">
                 <li class="menu-item" style="border-width: thin; border-radius: 10px; padding: 10px; box-shadow: 5px 5px 10px #dbdbdb, -5px -5px 10px #ffffff;"><a href="index.html"><underline style="color: #03327d;">Home</underline></a></li>
-                <li class="menu-item"><a href="shop-details.html"><underline style="color: #03327d;">Shop</underline></a></li>
+                <li class="menu-item"><a href="shop-details.html"><underline style="color: #03327d;">Shop </underline></a></li>
   
-                <li class="menu-item"><a href="shop.html"><i class="fa-brands fa-youtube" style="font-size: x-large;"></i></a></li>
-                <li class="menu-item"><a href="shop.html"><underline style="color: #03327d;">Etsy</underline></a></li>
+                <li class="menu-item"><a href="shop.html" style="color: #00033c40;">Youtube</a></a></li>
+                <li class="menu-item"><a href="shop.html"><underline style="color: #03327d;"> Etsy</underline></a></li>
                 <li class="menu-item"><a href="faq.html"><underline style="color: #03327d;">About Us</underline></a></li>
                 </ul>
             </div>
@@ -102,27 +100,31 @@
         <div class="page-content">
             <div>
               <div class="profile-page">
-                <div class="wrapper">
+                <div class="wrapper" style="border-top: solid; margin: 9px; border-color: #14559c;">
                   <div class="page-header page-header-small" filter-color="green">
-                    <div class="page-header-image" data-parallax="true" style="background-image: url('img/producttable2.png')"></div>
-                    <div class="container">
-                      <div class="content-center" style="z-index: 2;">
-                        <div class="h2 title" style="color: #03327d; font-size: xxx-large; font-family:u;">Arrow Designs</div>
+                    <div class="container" style="background-image: url(img/producttable2.png); background-position: center;
+                    background-size: contain; background-repeat: no-repeat;">
+                      <div class="content-center" style="z-index: 2; top: 300px;">
+                        <div class="h2 title" style="color: #03327d; font-size: xxx-large; font-family:u;">Epoxy Woods</div>
                         <p style="color: #03327d;"></p><br>
                         <a  class="btn btn-primary smooth-scroll mr-2 aos-init aos-animate" style="border: solid; background-image: url(img/Woodworkback.png);" href="shop-details.html" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Custom Design</a>
                         <a  class="btn btn-primary aos-init aos-animate" style="border: solid; background-color: #03327d;" href="shop.html" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Shop all</a>
+                        <a  class="btn btn-primary aos-init aos-animate" style="border: solid; background-color: #00183e;" href="shop.html" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Subscribe 10% Off!</a>
+
                       </div>
                     <div class="section" style="padding-top: 80vh; justify-content: center; border-bottom: solid;
-                    border-color: #03327d;">
+                    border-color: #14559c; width: 90%;">
                         <div class="button-container">
-                            <a href="#" rel="tooltip" title="" data-original-title="Follow me on Facebook">
-                            <i class="fa fa-facebook"></i></a>
-                            <a href="#" rel="tooltip" title="" data-original-title="Follow me on Twitter">
-                            <i class="fa fa-twitter"></i></a>
-                            <a href="#" rel="tooltip" title="" data-original-title="Follow me on Google+">
-                            <i class="fa fa-google-plus"></i></a>
-                            <a href="#" rel="tooltip" title="" data-original-title="Follow me on Instagram">
-                            <i class="fa fa-instagram"></i></a>
+                            <a href="shop.html" style="    display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            justify-items: center;
+                            align-content: center;
+                            flex-direction: row;
+                            flex-wrap: wrap;
+                            color: rgba(113, 113, 113, 0.973);
+                            text-decoration: none;
+                        "><i class="fa-brands fa-youtube" style="font-size: xx-large; color: red;"></i>You can see orders being built on our YouTube!</a></li>
                         </div>
                     </div>
                 </div>
@@ -217,7 +219,7 @@
                             <p class="card__description">Description</p>
                         </div>
                     </article>
-                    <article class="card" style="background: url(/img/Arrow\ Designs\ \(2\).png); background-size: cover;     background-position-y: center; background-repeat: no-repeat;">
+                    <article class="card" style="background: url(/img/Screenshot\ 2022-09-17\ at\ 11.38.37.png); background-size: contain;     background-position-y: center; background-repeat: no-repeat;">
                     </article>
                     <article class="card" style="background: url(/img/producttable6.png); background-size: contain; background-repeat: no-repeat;">
                         <div class="card__content">
@@ -260,7 +262,7 @@
                 </h1>
                 <div class="main-visual__background" style="background-size: contain;">
                         <video style="width:100%; border-radius: 10px; " controls>
-                            <source src="img/To scale (1).mp4" type="video/mp4" allow="autoplay">
+                            <source src="img/Woodwork (1).mp4" type="video/mp4" allow="autoplay">
                         </video>
                     <div class="overlay"></div>
                 </div>
@@ -295,14 +297,14 @@
                         </div>
                         <div class="col-sm-4">
                             <div class="team-member" >
-                                <img src="img/Max.png" class="img-responsive img-circle" alt="">
+                                <img src="img/MaxFun.png" style="height: 350px;" class="img-responsive img-circle" alt="">
                                 <h4>Max Worsencroft</h4>
                                 <p class="text-muted">Lead Operations Control</p>
                                 <p class="text-muted">Co-founder</p>
                                 <ul class="list-inline social-buttons" style="display: flex; flex-direction: row; flex-wrap: wrap;align-content: center;justify-content: center;align-items: center;">
                                     <li><a href="#"><i class="fa fa-facebook"></i></a>
                                     </li>
-                                    <li><div class="imageContainers" style="width: 45px; height:45px;"><img src="img/MaxFun.png" width="100%" height="100%" style="border-radius: 50px; border-color:black; border-width: thin; box-shadow: none;"></i></div>
+                                    <li><div class="imageContainers" style="width: 45px; height:45px;"><img src="img/Max.png" width="100%" height="100%" style="border-radius: 50px; border-color:black; border-width: thin; box-shadow: none;"></i></div>
                                     </li>
                                     <li><a href="#"><i class="fa fa-linkedin"></i></a>
                                     </li>
