--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                     <div class="row" style="justify-content: center;">
                         <div class="col-sm-4">
                             <div class="team-member">
-                                <img src="img/Tommo.png" class="img-responsive img-circle" alt="">
+                                <img src="img/Tommo.png" style="height: 350px;" class="img-responsive img-circle" alt="">
                                 <h4>Tom Southern</h4>
                                 <p class="text-muted">Lead Designer</p>
                                 <p class="text-muted">Co-founder</p>
