--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 
     <script src="https://kit.fontawesome.com/4c7f2cf79a.js" crossorigin="anonymous"></script>
 
-    <link rel="icon" href="img/favicon.png" sizes="32x32" alt="Apple"/>
-    <link rel="icon" href="img/ion-icon name=logo-amazonion-icon (7).webp" sizes="192x192" alt="Iphone"/>
-    <link rel="icon" href="img/ion-icon name=logo-amazonion-icon (7).webp" sizes="144x144" alt="Startup"/>
-    <link rel="apple-touch-icon" href="img/ion-icon name=logo-amazonion-icon (8).webp" alt="Touch"/>
-    <meta name="msapplication-TileImage" content="img/ion-icon name=logo-amazonion-icon (8).webp" sizes="270x270" height="270" width="270" alt="icon"/>
+    <link rel="icon" href="img/favicon-32x32.png" sizes="32x32" alt="Apple"/>
+    <link rel="icon" href="img/android-chrome-192x192.png" sizes="192x192" alt="Iphone"/>
+    <link rel="icon" href="img/android-chrome-512x512.png" sizes="144x144" alt="Startup"/>
+    <link rel="apple-touch-icon" href="img/apple-touch-icon.png" alt="Touch"/>
+    <meta name="msapplication-TileImage" content="img/android-chrome-512x512" sizes="270x270" height="270" width="270" alt="icon"/>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&display=swap"
@@ -70,11 +70,11 @@
 
     <!-- Header Section Begin -->
     <div class="containers" style="width: 100%;">
-        <header class="header" style="    background-image: url(img/10.png); 
+        <header class="header" style="    background-image: url(img/Woodwork\ \(15\).png); 
         background-position: center;
         background-size: contain;
         background-repeat: no-repeat;
-        height: 10vh;
+        height: 15vh;
         margin: 1vmax;">
             <nav class="navbar"  style="justify-content: center;     background-color: #f1f5f800;">
             <a style="color: #03327d; font-family: sans-serif;" class="brand" href="#"></a>
@@ -100,20 +100,19 @@
         <div class="page-content">
             <div>
               <div class="profile-page">
-                <div class="wrapper" style="border-top: solid; margin: 9px; border-color: #14559c;">
+                <div class="wrapper" style="background-image: url(img/Woodwork\ \(16\).png); background-position: center;
+                background-size: cover; background-repeat: no-repeat;  margin: -10px; border-color: #14559c; height: 90vh;">
                   <div class="page-header page-header-small" filter-color="green">
-                    <div class="container" style="background-image: url(img/producttable2.png); background-position: center;
-                    background-size: contain; background-repeat: no-repeat;">
-                      <div class="content-center" style="z-index: 2; top: 300px;">
-                        <div class="h2 title" style="color: #03327d; font-size: xxx-large; font-family:u;">Epoxy Woods</div>
-                        <p style="color: #03327d;"></p><br>
+                    <div class="container">
+                      <div class="content-center" style="z-index: 2; top: 300px;"><BR><BR><BR><BR><BR><BR>
+                        <div class="h2 title" style="color: #03327d; font-size: 5em; font-weight: bold; font-family:u;">Crafting Sustainable Perfection</div>
+                        <p style="color: #03327d;"><img src=""></p>
                         <a  class="btn btn-primary smooth-scroll mr-2 aos-init aos-animate" style="border: solid; background-image: url(img/Woodworkback.png);" href="shop-details.html" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Custom Design</a>
                         <a  class="btn btn-primary aos-init aos-animate" style="border: solid; background-color: #03327d;" href="shop.html" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Shop all</a>
                         <a  class="btn btn-primary aos-init aos-animate" style="border: solid; background-color: #00183e;" href="shop.html" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Subscribe 10% Off!</a>
 
                       </div>
-                    <div class="section" style="padding-top: 80vh; justify-content: center; border-bottom: solid;
-                    border-color: #14559c; width: 90%;">
+                    <div class="section" style="padding-top: 80vh; justify-content: center; ">
                         <div class="button-container">
                             <a href="shop.html" style="    display: flex;
                             justify-content: center;
@@ -124,7 +123,7 @@
                             flex-wrap: wrap;
                             color: rgba(113, 113, 113, 0.973);
                             text-decoration: none;
-                        "><i class="fa-brands fa-youtube" style="font-size: xx-large; color: red;"></i>You can see orders being built on our YouTube!</a></li>
+                        "><i class="fa-brands fa-youtube" style="font-size: xx-large; color: red;"></i></a></li>
                         </div>
                     </div>
                 </div>
@@ -262,7 +261,7 @@
                 </h1>
                 <div class="main-visual__background" style="background-size: contain;">
                         <video style="width:100%; border-radius: 10px; " controls>
-                            <source src="img/Woodwork (1).mp4" type="video/mp4" allow="autoplay">
+                            <source src="img/EpoxyWoods.mp4" type="video/mp4" allow="autoplay">
                         </video>
                     <div class="overlay"></div>
                 </div>
@@ -281,7 +280,7 @@
                     <div class="row" style="justify-content: center;">
                         <div class="col-sm-4">
                             <div class="team-member">
-                                <img src="img/Tommo.png" style="height: 350px;" class="img-responsive img-circle" alt="">
+                                <img src="img/Tommo.png" class="img-responsive img-circle" alt="">
                                 <h4>Tom Southern</h4>
                                 <p class="text-muted">Lead Designer</p>
                                 <p class="text-muted">Co-founder</p>
@@ -297,7 +296,7 @@
                         </div>
                         <div class="col-sm-4">
                             <div class="team-member" >
-                                <img src="img/MaxFun.png" style="height: 350px;" class="img-responsive img-circle" alt="">
+                                <img src="img/Max.png" style="height: 350px;" class="img-responsive img-circle" alt="">
                                 <h4>Max Worsencroft</h4>
                                 <p class="text-muted">Lead Operations Control</p>
                                 <p class="text-muted">Co-founder</p>
@@ -316,7 +315,7 @@
             </section>
         
             <!-- Contact Us -->
-           <section id="contact" style="padding:6vh; box-shadow: 0px -1px 10px #6c757d;     padding-bottom: 80px;opacity: 80%;">
+           <section id="contact" style="padding:6vh; box-shadow: 0px -1px 10px #6c757d;     padding-bottom: 80px;">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12 text-center">
