--- a/shop-details.html
+++ b/shop-details.html
@@ -65,8 +65,13 @@
 
     <!-- Header Section Begin -->
     <div class="containers" style="width: 100%;">
-      <header class="header" style="background-image: url(); background-position: center;     background-size: cover; padding-bottom: 1vh; border-bottom: solid;">
-          <nav class="navbar"  style="justify-content: center;     background-color: #f1f5f8;">
+      <header class="header" style="    background-image: url(img/10.png); 
+      background-position: center;
+      background-size: contain;
+      background-repeat: no-repeat;
+      height: 10vh;
+      margin: 1vmax;">
+        <nav class="navbar"  style="justify-content: center;     background-color: #f1f5f800;">
           <a style="color: #03327d; font-family: sans-serif;" class="brand" href="#"></a>
           <input type="checkbox" id="nav" class="hidden">
           <label for="nav" class="nav-toggle">
@@ -74,14 +79,14 @@
               <span></span>
               <span></span>
           </label>
-          <div class="wrapper" >
-              <ul class="menu">
-              <li class="menu-item"><a href="index.html"><underline style="color: #03327d;">Home</underline></a></li>
-              <li class="menu-item" style="border-width: thin; border-radius: 10px; padding: 10px; box-shadow: 5px 5px 10px #dbdbdb, -5px -5px 10px #ffffff;"><a href="shop-details.html"><underline style="color: #03327d;">Shop</underline></a></li>
+          <div class="wrapper" style="    margin-top: 1.25vh;">
+              <ul class="menu" style="text-align-last: center;">
+              <li class="menu-item" style="border-width: thin; border-radius: 10px; padding: 10px; box-shadow: 5px 5px 10px #dbdbdb, -5px -5px 10px #ffffff;"><a href="index.html"><underline style="color: #03327d;">Home</underline></a></li>
+              <li class="menu-item"><a href="shop-details.html"><underline style="color: #03327d;">Shop </underline></a></li>
 
-              <li class="menu-item"><a href="shop.html"><i class="fa-brands fa-youtube" style="font-size: x-large;"></i></li>
-                <li class="menu-item"><a href="shop.html"><underline style="color: #03327d;">Etsy</underline></a></li>
-                <li class="menu-item"><a href="faq.html"><underline style="color: #03327d;">About Us</underline></a></li>
+              <li class="menu-item"><a href="shop.html" style="color: #00033c40;">Youtube</a></a></li>
+              <li class="menu-item"><a href="shop.html"><underline style="color: #03327d;"> Etsy</underline></a></li>
+              <li class="menu-item"><a href="faq.html"><underline style="color: #03327d;">About Us</underline></a></li>
               </ul>
           </div>
           </nav>
